task: fixed unvisible text on resource page

--- a/internal/views/resourceview/resource_page.css
+++ b/internal/views/resourceview/resource_page.css
@@ -67,7 +67,3 @@
 .muted-text {
   color: var(--muted-text-color);
 }
-
-td.is-due {
-  color: var(--text-color-contrast);
-}
